# wh_1

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISIONS.md  Procfile  README.md  ROADMAP.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: backup.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_auto_close.py  003_photo_storage.py  004_roles_crews.py  005_crew_default_rate.py  006_day_entries.py  007_advances.py  008_day_reminders.py  009_app_settings.py  010_onboarding.py  011_salary_payments.py  012_user_currency.py  013_advance_period.py  014_user_timezone.py  015_share_tokens.py  016_cloud_backups.py  017_enable_rls.py  018_legacy_clock_default_false.py
docs/: ONBOARDING.md  RUNBOOK.md
docs/archive/: AGENT_SPEC_phase0.md  AUDIT.md
src/admin/: __init__.py  app.py  auth.py  rate_limit.py
src/admin/templates/: audit.html  base.html  calendar.html  dashboard.html  shifts.html  sites.html  users.html
src/bot/: filters.py  keyboards.py  main.py  scheduler_runner.py  states.py  strings.py
src/bot/handlers/: accounting.py  admin.py  advances.py  backup.py  breaks.py  calendar.py  common.py  crew_admin.py  day_entries.py  exports.py  geofence_edit.py  nl_router.py  notes.py  onboarding.py  profile.py  report.py  reports.py  settings.py  shift_edits.py  shifts.py  system.py
src/bot/middlewares/: features.py  fsm_breadcrumbs.py
src/core/: config.py  db.py  db_metrics.py  models.py  sentry.py
src/exporters/: xlsx.py
src/services/: accounting.py  advances.py  app_settings.py  audit.py  backup_cloud.py  breaks.py  crews.py  day_entries.py  digest.py  forecast.py  geofence.py  onboarding.py  photos.py  range_sum.py  reminders.py  reminders_smart.py  reports.py  salary_payments.py  scheduler.py  share_backup.py  share_cleanup.py  shift_edits.py  shifts.py  timezones.py  transcription.py
src/services/reports/: __init__.py  archive.py  backup.py  parser.py  pdf.py  (+5 more)
tests/: conftest.py  test_accounting.py  test_admin.py  test_admin_panel.py  test_advances.py  test_app_settings.py  test_backup.py  test_backup_cloud.py  test_backup_handlers.py  test_breaks.py  test_calendar_bulk_fill.py  test_calendar_handler.py  test_crews.py  test_day_entries.py  test_db_integration.py  test_db_metrics.py  test_earnings.py  test_features_middleware.py  test_forecast.py  test_fsm_breadcrumbs.py  test_geofence.py  test_handlers_smoke.py  test_keyboards.py  test_nl_parser.py  test_nl_router.py  test_onboarding.py  test_photos.py  test_profile.py  test_range_picker.py  test_range_sum.py  test_reminders.py  test_reminders_smart.py  test_report.py  test_restore.py  test_salary_payments.py  test_scheduler.py  test_scheduler_monthly_png.py  test_scheduler_smart.py  test_share_backup.py  test_share_cleanup.py  (+4 more)
