[project]
name = "construction-timetrack-bot"
version = "0.1.0"
description = "Telegram bot for construction site time tracking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.1",
    "openpyxl>=3.1",
    "structlog>=24.1",
    "geoalchemy2>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "T20", "RET", "SIM"]
ignore = ["COM812"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
