[project]
name = "construction-timetrack-bot"
version = "0.1.0"
description = "Telegram bot for construction site time tracking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.1",
    "openpyxl>=3.1",
    "reportlab>=4.0,<5",
    "matplotlib>=3.8,<4",
    "structlog>=24.1",
    "geoalchemy2>=0.15",
    "httpx>=0.27",
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.0,<3",
]

[project.optional-dependencies]
# Upper bounds pinned to the next breaking-major to keep CI reproducible —
# a `mypy 2.x` auto-upgrade silently broke CI for 8 commits in May 2026.
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<7",
    "ruff>=0.3,<1",
    "mypy>=1.9,<2",
    "types-openpyxl>=3.1",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "T20", "RET", "SIM"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"src/admin/*.py" = ["B008"]  # FastAPI-style Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
